--- a/css/uncambass.css
+++ b/css/uncambass.css
@@ -156,7 +156,6 @@ header .navbar a {
 
 .main-image {
     grid-column: 1/2;
-    /* Adjusted grid-row to ensure proper placement */
     grid-row: 3/4;
     position: relative;
 }
@@ -173,11 +172,11 @@ header .navbar a {
 }
 
 .content h1 {
-    font-size: 60px; /* Adjust if needed */
+    font-size: 60px; 
 }
 
 .content p {
-    font-size: 20px; /* Increased font size for better readability */
+    font-size: 20px; 
     padding-left: 30px;
     padding-right: 30px;
 }
@@ -187,11 +186,11 @@ header .navbar a {
 }
 
 .contact h2 {
-    font-size: 30px; /* Adjust if needed */
+    font-size: 30px; 
 }
 
 .contact p {
-    font-size: 18px; /* Adjust if needed */
+    font-size: 18px; 
 }
 
 
